--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
   </button>
     <div class="collapse navbar-collapse" id="mainmenu">
         <ul class="navbar-nav mx-auto ">
-            <li class="nav-item "><a class="nav-link" routerLink="info">Info</a></li>
+            <li class="nav-item "><a class="nav-link" routerLink="home">Home</a></li>
             <li class="nav-item "><a class="nav-link" routerLink="Koncerty">Koncerty</a></li>
             <li class="nav-item "><a class="nav-link" routerLink="dyskografia">Dyskografia</a></li>
             <li class="nav-item "><a class="nav-link" routerLink="Kontakt">Kontakt</a></li>
