--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,3 @@
 <div id="logo">
-    <img src="assets/logo5.png" alt="logo radogost" height="150px">
+    <img [@fadeIn]="'in'" src="assets/logo5.png" alt="logo radogost" height="150px">
 </div>
