--- a/src/app/koncerty/konerty-create/konerty-create.component.html
+++ b/src/app/koncerty/konerty-create/konerty-create.component.html
@@ -20,7 +20,7 @@
         </div>
         <div class="form-group">
             <label for="link">Link</label>
-            <input type="text" id="link" required [(ngModel)]="koncert.link" name="link" placeholder="Wpisz link...">
+            <input type="text" id="link" required [(ngModel)]="koncert.link" name="link" placeholder="">
         </div>
 
         <button type="submit">Dodaj</button>
