--- a/src/styles.css
+++ b/src/styles.css
@@ -191,3 +191,6 @@
             height: 33px;
         }
     }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
