--- a/src/styles.css
+++ b/src/styles.css
@@ -4,16 +4,16 @@
         border: 0;
     }
     /*background img*/
-
+    
     body {
-        background-color: #0a0a0a !important;
+        background-color: #000000 !important;
         background-image: url('src\assets\bg.png');
         background-repeat: no-repeat;
         background-position-x: center;
     }
     /*background img ends*/
     /*logo*/
-
+    
     #logo {
         position: fixed;
         top: 6.5%;
@@ -24,13 +24,13 @@
     }
     /*logo ends*/
     /*menu górne*/
-
+    
     .bg-color {
         background-color: rgba(0, 0, 0, 0.582);
     }
     /*menu górne ends*/
     /*content*/
-
+    
     #outlet {
         position: absolute;
         top: 43%;
@@ -39,7 +39,7 @@
         background-color: rgba(0, 0, 0, 0.342);
         margin: 10px;
     }
-
+    
     .info p {
         padding: 5px;
         font-size: 15px;
@@ -50,42 +50,42 @@
     }
     /*content ends*/
     /*koncerty*/
-
+    
     table {
         width: 100%;
         font-family: Arial, Helvetica, sans-serif;
         color: rgba(245, 245, 245, 0.719);
         margin: 5px;
     }
-
+    
     table.tablehead th {
         width: 25%;
         text-align: center;
     }
-
+    
     table.tablehead {
         background-color: rgba(0, 0, 0, 0.582);
     }
-
+    
     table.tablebody:nth-child(2n+1) {
         background-color: rgba(150, 160, 160, 0.274);
     }
-
+    
     div.tbody:nth-child(2n) {
         background-color: rgba(7, 6, 8, 0.842);
     }
-
+    
     div.tbody:nth-child(n):hover {
         opacity: 80%;
     }
-
+    
     table.tablebody td {
         width: 25%;
         text-align: center;
     }
     /*koncerty ends*/
     /*dyskografia*/
-
+    
     .disc img {
         contain: 100%;
         display: block;
@@ -96,47 +96,47 @@
         padding: 0px;
         transition: .8s;
     }
-
+    
     .disc button :hover {
         opacity: 0.7;
         transition: .5s;
     }
-
+    
     .text {
         color: white;
         font-size: 16px;
         padding: 8px;
         font-family: 'Montserrat', sans-serif;
     }
-
+    
     .disc ol {
         display: inline-block;
         list-style-type: decimal;
         padding-left: 15px;
     }
-
+    
     .maxi-width {
         max-width: 500px;
     }
     /*dyskografia ends*/
     /*footer*/
-
+    
     .footer {
         position: fixed;
         right: 0;
         bottom: 10%;
     }
-
+    
     .social-icons {
         padding-left: 0;
         margin-bottom: 0;
         list-style: none
     }
-
+    
     .social-icons li {
         margin-bottom: 4px
     }
-
+    
     .social-icons li.title {
         margin-right: 15px;
         text-transform: uppercase;
@@ -144,7 +144,7 @@
         font-weight: 700;
         font-size: 13px
     }
-
+    
     .social-icons a {
         background-color: #eceeef;
         color: #818a91;
@@ -160,37 +160,44 @@
         -o-transition: all .2s linear;
         transition: all .2s linear
     }
-
+    
     .social-icons a:active,
     .social-icons a:focus,
     .social-icons a:hover {
         color: #fff;
         background-color: #7a868d
     }
-
+    
     .social-icons a.facebook:hover {
         background-color: #3b5998
     }
-
+    
     .social-icons a.youtube:hover {
         background-color: #c4302b
     }
-
+    
     .social-icons a.spotify:hover {
         background-color: #1DB954
     }
-
+    
     .social-icons a.dribbble:hover {
         background-color: #ea4c89
     }
     /*footer ends*/
-
+    
     @media (max-width:575px) {
         .social-icons a {
             width: 33px;
             height: 33px;
         }
     }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+    
+    html,
+    body {
+        height: 100%;
+    }
+    
+    body {
+        margin: 0;
+        font-family: Roboto, "Helvetica Neue", sans-serif;
+    }
